# CalWid

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  calendar.rs  main.rs  tasks.rs
