[package]
name = "calendar-widget"
version = "1.0.0"
description = "Google Calendar Widget"
authors = ["Haakon"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
open = "5"
base64 = "0.22"
url = "2"
rand = "0.8"
sha2 = "0.10"
tiny_http = "0.12"
urlencoding = "2"

[profile.release]
strip = true
lto = true
opt-level = "s"
